feat: add session in auth service
